--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
   "author": "Ross Douglas & David Wilson",
   "license": "MIT",
   "dependencies": {
-    "commander": "^11.1.0"
+    "@modelcontextprotocol/sdk": "^1.25.3",
+    "@types/js-yaml": "^4.0.9",
+    "commander": "^11.1.0",
+    "js-yaml": "^4.1.1"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
