Add OpenClaw plugin (@openclaw/janee)
- Created packages/openclaw-plugin/ with MCP client wrapper
- Plugin exposes janee_list_services, janee_execute, janee_get_http_access tools
- Spawns 'janee serve --mcp' subprocess and communicates via stdio
- Added comprehensive README for plugin with installation/usage
- Updated main README with OpenClaw integration section
- Rewrote docs/OPENCLAW.md to focus on plugin approach (native integration)
- Set up npm workspaces for monorepo structure
- Ready for 'npm publish' when approved

This is the proper OpenClaw integration path - agents use native tools
instead of HTTP proxy URL rewrites. Plugin handles MCP communication,
Janee handles key injection + audit logging.

--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
   "bin": {
     "janee": "dist/cli/index.js"
   },
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && npm run build --workspaces",
+    "build:cli": "tsc",
+    "build:plugin": "npm run build --workspace=packages/openclaw-plugin",
     "dev": "tsc --watch",
     "start": "node dist/cli/index.js",
     "test": "jest"
