Prepare for v0.1.0 release
- Add CHANGELOG.md
- Update package.json: description, keywords, files, repository
- All tests passing

--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
   "name": "janee",
   "version": "0.1.0",
-  "description": "Secrets management for AI agents — with LLM-adjudicated access control",
+  "description": "Secrets management for AI agents via MCP",
   "main": "dist/index.js",
   "bin": {
     "janee": "dist/cli/index.js"
+  },
+  "files": [
+    "dist"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rsdouglas/janee.git"
   },
   "workspaces": [
     "packages/*"
@@ -23,8 +30,9 @@
     "agents",
     "security",
     "secrets",
-    "proxy",
-    "llm"
+    "mcp",
+    "model-context-protocol",
+    "api-proxy"
   ],
   "author": "Ross Douglas & David Wilson",
   "license": "MIT",
