--- a/packages/openclaw-plugin/package.json
+++ b/packages/openclaw-plugin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "janee-openclaw-plugin",
+  "name": "@true-and-useful/janee-openclaw",
   "version": "0.1.0",
   "description": "OpenClaw plugin for Janee secrets management - provides secure API access through MCP",
   "main": "dist/index.js",
