--- a/packages/openclaw-plugin/package.json
+++ b/packages/openclaw-plugin/package.json
@@ -1,11 +1,15 @@
 {
   "name": "@true-and-useful/janee-openclaw",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "OpenClaw plugin for Janee secrets management - provides secure API access through MCP",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "openclaw": {
+    "extensions": ["./dist/index.js"]
+  },
   "files": [
     "dist",
+    "openclaw.plugin.json",
     "README.md"
   ],
   "scripts": {
