--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@true-and-useful/janee",
+  "mcpName": "io.github.rsdouglas/janee",
   "version": "0.8.0",
   "description": "Secrets management for AI agents via MCP",
   "main": "dist/index.js",
